version 2.1.0
-------------
* grouped some useful info in struct cpufreqd_info to let plugins peek important data
* added -m switch to start cpufreqd in manual mode
* reset timer when entering manual mode
* forcing update when exiting manual mode
* sanitized set/reset of SIGALRM
* added cpufreqd_exec plugin
* added cpufreqd_acpi_event plugin
* added cpufreqd_governor_parameters plugin

version 2.0.0
-------------
* 2.0.0 final
* fix an incorrect printf format that caused to SIGSEGV on 64bit platforms
* make cpufreqd al little more conservative when choosing a rule by 
keeping an already applied rule in case of a tie

version 2.0.0-pre2
-------------------
* fixed leak in nvclock plugin (note that you still need to patch
nvclock as a problem was found there also)
* code cleanup in config_parser.c
* enabled subsecond poll_interval
* fixed SIGSEGV when duplicate rules found
* avoid configuring the same plugin twice

version 2.0.0-pre1
-------------------
* implemented backward compatibility for the configuration file
format (great!!)
* automatically load plugins (if not configured) and rely on plugins
initialization to probe the necessary stuff
* the configure script now accepts --enable/disable options for 
plugns that need some sort of special support
* ported the PMU plugin
* added sensors plugin (you'll need userspace libs from lm-sensors)
* fixed socket creation permissions
* added the ability to allow a certain group to read/write
to the socket
* fixed looots of bugs
* beautified logs
* the "cpu" directive was wrong, now named "cpu_interval"
run 'sed -i -e 's/^cpu=/cpu_interval=/' /etc/cpufreqd.conf'
to fix things. I'm sooooo sooorry...
* reworked plugins post-configuration (might drop it actually), now
plugins are correctly initialized even if their global section is missing

version 2.0.0-beta4
-------------------
* more remote commands supported
* nforce2-atxp1 supported bi nforce2 plugin
* reworked main loop to use SIGALARM