@@ -1,7 +1,4 @@
 
-- merge cpufreqd_acpi_* into a single plugin to share useful data (now that event 
-  is available one can avoid polling some devices)
-
 - cpufreqd_cpu: make it aware of single cpu loads
 
 - cpufreqd_date
